<resources>
    <string name="app_name">Ping me</string>
    <string name="textview">TextView</string>
    <string name="need_a_new_account">NEED A NEW ACCOUNT</string>
    <string name="welcome_to_ping_me">Welcome to Ping me</string>
    <string name="hint">hint</string>
    <string name="this_is_main_page">This is main page</string>
    <string name="display_name">Display Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="create_account">CREATE ACCOUNT</string>
    <string name="log_out">Log Out</string>
    <string name="create_a_new_account">Create a New Account</string>
</resources>
